<resources>
    <string name="app_name">Arcemii</string>
    <string name="create_party">Create Party</string>
    <string name="join_party">Join Party</string>
    <string name="join_party2">Enter</string>
    <string name="settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="play_game">Play Game</string>
    <string name="game_pin">Game PIN: -</string>
    <string name="game_pin_hint">Game PIN</string>
    <string name="empty_game_pin">-</string>
    <string name="set_username">Username: </string>
    <string name="hint_username">new username</string>
    <string name="save">Save username</string>
    <string name="sharedpref_username">username</string>
    <string name="sharedpref_playerinfo">playerinfo</string>
    <string name="sharedpref_connectioninfo">connectioninfo</string>
    <string name="sharedpref_connection">connection</string>
    <string name="sharedpref_servermode">servermode</string>
    <string name="sharedpref_servermodeinfo">servermodeinfo</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="set_servermode">Servermode:</string>
    <string name="ability_button">Click for the next ability</string>
    <string name="ability_tutorial">tap slots above to get the next available ability</string>
    <string name="audio_unmuted">music</string>
    <string name="audio_muted">muted</string>
</resources>
