<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCreateParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pantone448C"
            android:onClick="onCreateParty"
            android:text="@string/create_party"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnJoinParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pantone448C"
            android:onClick="onJoinParty"
            android:text="@string/join_party"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pantone448C"
            android:onClick="onSettings"
            android:text="@string/settings"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>